--- a/manifest.json
+++ b/manifest.json
@@ -8,8 +8,8 @@
     "default_title": "Use this to open the popup",
     "default_popup": "popup/popup.html"
   },
-  "background": {
-    "scripts": ["background.js"],
-    "persistent": false
-  }
+  "permissions": [
+    "http://*/*",
+    "https://*/*"
+  ]
 }
