--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,19 @@
 {
-  "manifest_version": 2,
-  "name": "jira_tempo_ext",
-  "version": "0.1.0",
-  "description": "Extension",
-  "author": "Fedotov Vladimir @vlfedotov",
-  "browser_action": {
+    "manifest_version": 2,
+    "name": "jira_tempo_ext",
+    "version": "0.1.0",
+    "description": "Extension",
+    "author": "Fedotov Vladimir @vlfedotov",
+    "browser_action": {
     "default_title": "Use this to open the popup",
     "default_popup": "popup/popup.html"
-  },
-  "permissions": [
-    "http://*/*",
-    "https://*/*"
-  ]
+    },
+    "background": {
+        "scripts": ["background.js"],
+        "persistent": true
+    },
+    "permissions": [
+        "http://*/*",
+        "https://*/*"
+    ]
 }
